# RoboMage

./: .gitignore  .llm-context.md  DOCUMENTATION-UPDATE-Nov13-2025.md  LICENSE  MERGE-SUMMARY-Nov12-2025.md  README.md  peak_analyzer.py  pixi.toml  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml
docs/: DEVELOPMENT.md  README_full.md  llm-chat-guide.md  peak-analysis-development-context.md  peak-analysis-tool-documentation.md  peak-analysis-tool-plan.md  sprint-2-data-pipeline.md  sprint-3-peak-analysis-plan.md  sprint-4-phase-1-5-implementation.md  sprint-4-phase-1-summary.md  sprint-4-visualization-dashboard.md
examples/: load_data_example.py  pdf_SRM_660b_q.chi  robomage_data_module_demo.ipynb  xy_file_example.py
services/peak_analysis/: README.md  __init__.py  engine.py  main.py  models.py
src/robomage/: __init__.py  __main__.py  data_io.py
src/robomage/clients/: __init__.py  peak_analysis_client.py
src/robomage/config/: __init__.py  refinement_schema.py
src/robomage/dashboard/: __init__.py  __main__.py  app.py
src/robomage/dashboard/callbacks/: analysis.py  file_upload.py  plotting.py
src/robomage/dashboard/layouts/: main_layout.py
src/robomage/dashboard/utils/: __init__.py
src/robomage/data/: __init__.py  loaders.py  models.py
test_output/: pdf_SRM_660b_q_peaks.csv  pdf_SRM_660b_q_peaks.json
tests/: test_dashboard.py  test_dashboard_analysis.py  test_data_io.py  test_data_loaders.py  test_data_models.py  test_peak_analysis_integration.py  test_schema.py  test_xy_loading.py
