[project]
name = "robomage"
version = "0.0.1"
description = "Automated powder diffraction analysis framework"
readme = "README.md"
authors = [{name = "Daniel Olds"}]
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "ruff", "mypy", "pydantic>=2", "numpy", "pandas", "matplotlib", "sqlalchemy"]

[project.urls]
Homepage = "https://github.com/DanOlds/RoboMage"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
robomage = "robomage.__main__:main"
