[project]
name = "robomage"
version = "0.0.1"
description = "Automated powder diffraction analysis framework"
readme = "README.md"
authors = [{name = "Daniel Olds"}]
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = [
  "pydantic>=2",
  # Add these when your package starts importing them in src/robomage/*
  # "numpy",
  # "pandas",
  # "matplotlib",
  # "sqlalchemy",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "ruff", "mypy"]

[project.urls]
Homepage = "https://github.com/DanOlds/RoboMage"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
robomage = "robomage.__main__:main"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]  # errors, pyflakes, import order, pyupgrade, bugbear
ignore = ["E203"]                    # keep Black-compatible spacing (Ruff formatter matches it)

[tool.ruff.format]
docstring-code-format = true
