[project]
name = "robomage"
version = "0.0.1"
description = "Automated powder diffraction analysis framework"
readme = "README.md"
authors = [{name = "Daniel Olds"}]
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = [
  "pydantic>=2",
  "numpy",
  "pandas", 
  "matplotlib",
  "requests",
  "scipy>=1.10.0",
  # "sqlalchemy",  # Keep this commented until needed
]

[project.optional-dependencies]
dev = [
  "pytest", 
  "pytest-cov", 
  "ruff", 
  "mypy",
  # Type stubs for mypy
  "pandas-stubs",
  "types-requests",
]
peak-analysis = [
  "fastapi>=0.100.0",
  "uvicorn>=0.20.0",
]

[project.urls]
Homepage = "https://github.com/DanOlds/RoboMage"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
robomage = "robomage.__main__:main"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]  # errors, pyflakes, import order, pyupgrade, bugbear
ignore = ["E203"]                    # keep Black-compatible spacing (Ruff formatter matches it)

[tool.ruff.format]
docstring-code-format = true

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
# Exclude dashboard files from strict type checking (complex Dash component types)
exclude = ["src/robomage/dashboard/.*"]

# Ignore missing imports for libraries without stubs  
[[tool.mypy.overrides]]
module = [
    "dash_bootstrap_components.*",
    "plotly.*", 
    "plotly.express.*",
    "plotly.graph_objects.*"
]
ignore_missing_imports = true
